fix: align text in gallery

--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -10,6 +10,7 @@ $secondary-color: #007ED9;
     background-color: #ffffff;
     .picture{
         margin: 15px 0px;
+        text-align: center;
         img{
             width: 224px;
             padding: 10px;
